#72 - Fix MD editor submit buttons alignment on mobile.

--- a/src/Recollections.Blazor.UI/wwwroot/css/_inline-editor.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/_inline-editor.scss
@@ -7,6 +7,10 @@
         color: $error-color;
     }
 
+    .editor-toolbar:after {
+        clear: both;
+    }
+
     .input-group-append {
         button:hover {
             .oi-check {
